// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skip Merging With Parent > Properly skips merging if skip merging is set to true > # Of Files Generated 1`] = `2`;

exports[`Skip Merging With Parent > Properly skips merging if skip merging is set to true > typescript/@minecraft/server@2.2.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/server",
 *   "version": "2.2.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function ChildFunction(): number;
"
`;

exports[`Skip Merging With Parent > Properly skips merging if skip merging is set to true > typescript/@minecraft/server-bindings@2.2.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/server-bindings",
 *   "version": "2.2.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function ParentFunction(): number;
"
`;
